# csv-transformer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-base.yaml  docker-compose-dev.yaml  docker-compose-staging.yaml  docker-compose.yaml
backend/: .env  .flake8  Dockerfile  Makefile  pyproject.toml  pytest.ini
backend/api/: __init__.py  celery.py  models.py  serializers.py  settings.py  test_settings.py  urls.py
backend/api/kafka_utils/: consumer.py  producer.py
backend/api/migrations/: 0001_initial.py  0002_useractionlog.py
backend/api/models/: __init__.py  csv_file_model.py  csv_record_model.py  generic_data_model.py  user_action_log_model.py
backend/api/serializers/: __init__.py  csv_file_serializer.py  csv_record_serializer.py  user_action_log_serializer.py
backend/api/services/: __init__.py  csv_file_service.py
backend/api/tasks/: __init__.py  kafka_consumer_task.py  task.py
backend/api/tests/: test_health_check.py
backend/api/tests/integration/: test_csv_upload.py
backend/api/tests/settings/: integration_test_settings.py  unit_test_settings.py
backend/api/tests/unit/: test_health_check.py
backend/api/utils/: log_user_action.py
backend/api/views/: __init__.py  csv_content_view.py  csv_enrichment_view.py  csv_list_view.py  csv_upload_view.py  get_kafka_message_view.py  health_check.py  publish_message_view.py  user_action_log_list_view.py
frontend/: .env  Dockerfile  README.md  jest.config.cjs  package-lock.json  package.json  playwright.config.mjs
frontend/public/: index.html
frontend/src/: App.js  CSVList.js  (+4 more)
(+20 files in other folders)
